Added configuration to generate Javadoc with mvn site command